[gd_scene load_steps=3 format=3 uid="uid://7hqfyc7u8h48"]

[ext_resource type="Script" path="res://gameplay/upgrade/UpgradeMenu.gd" id="1_2ene1"]
[ext_resource type="Script" path="res://gameplay/upgrade/UpgradeManager.gd" id="1_u7guu"]

[node name="UpgradeMenu" type="VBoxContainer"]
offset_right = 97.0
offset_bottom = 31.0
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_2ene1")

[node name="ShowHideButton" type="Button" parent="."]
layout_mode = 2
text = "UPGRADES!"

[node name="UpgradeOptions" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="UpgradeManager" type="Node" parent="."]
script = ExtResource("1_u7guu")

[connection signal="button_down" from="ShowHideButton" to="." method="_on_show_hide_button_button_down"]
